[gd_scene load_steps=5 format=3 uid="uid://spesqgw0rmyr"]

[ext_resource type="Script" path="res://Entety/Plains/Hole/Hole.gd" id="1_51b74"]
[ext_resource type="Texture2D" uid="uid://bs6els5dvum6t" path="res://Entety/Plains/Hole/Hole.png" id="2_b4plq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yoiqp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b4plq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rg15w"]

[node name="Area2D" type="Area2D"]
monitorable = false
script = ExtResource("1_51b74")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yoiqp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rg15w")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
